Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -582,16 +582,18 @@
                             hands-on experience in content creation, design execution, and client communication.
                         </p>
                         <div class="credential-links">
-                            <a href="c:\Users\chandu\AppData\Local\Packages\5319275A.WhatsAppDesktop_cv1g1gvanyjgm\LocalState\sessions\004D819AB1B9577DD46DE8BFA1A7AAA7F138DF49\transfers\2026-05\Nitya Sree Tammina - Internship Certificate.pdf"
-                                class="credential-link" target="_blank" rel="noopener noreferrer">
-                                <i class="fas fa-file-pdf"></i>
-                                <span>View Internship Certificate</span>
-                            </a>
-                            <a href="c:\Users\chandu\AppData\Local\Packages\5319275A.WhatsAppDesktop_cv1g1gvanyjgm\LocalState\sessions\004D819AB1B9577DD46DE8BFA1A7AAA7F138DF49\transfers\2026-05\Nitya Sree Tammina - Letter of Recommendation.pdf"
-                                class="credential-link" target="_blank" rel="noopener noreferrer">
-                                <i class="fas fa-file-pdf"></i>
-                                <span>View Letter of Recommendation</span>
-                            </a>
+                           <a href="certificates/Nitya-Sree-Tammina-Internship-Certificate.pdf"
+    class="credential-link" target="_blank" rel="noopener noreferrer">
+    <i class="fas fa-file-pdf"></i>
+    <span>View Internship Certificate</span>
+</a>
+
+                            <a href="certificates/Nitya-Sree-Tammina-Letter-of-Recommendation.pdf"
+    class="credential-link" target="_blank" rel="noopener noreferrer">
+    <i class="fas fa-file-pdf"></i>
+    <span>View Letter of Recommendation</span>
+</a>
+
                         </div>
                     </div>
                 </div>
@@ -810,5 +812,6 @@
     <!-- Custom JavaScript -->
     <script src="script.js"></script>
 </body>
+
 
 </html>
